<resources>
    <string name="app_name">Send CV</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="education">Education</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="send_to">Send To</string>
    <string name="capture">Capture Image</string>


</resources>
